# ForgeEngine

./: .env.example  .gitignore  CMakeLists.txt  CODEX_PROMPT_PLAYBOOK.md  DEPLOYMENT_GUIDE_IDIOT_PROOF.md  GAMEFORGE_ACCEPTANCE_TEST_MATRIX.md  GAMEFORGE_DECISIONS_LOCK.md  GAMEFORGE_EXECUTION_PLAN.md  GAMEFORGE_UX_COPY_STANDARDS_V1.md  GAMEFORGE_UX_FOUNDATIONS.md  GAMEFORGE_UX_WIREFRAME_BASELINE_V1.md  GAMEFORGE_V1_BLUEPRINT.md  README.md  art_bible.json  backlog.md  items.json  kits.json  scene_scaffold.json
.github/workflows/: codecov.yml  m1-skeleton-tests.yml  pr-validation.yml  release-packaging.yml
ai-orchestration/python/: art_bible.py  change_log.py  consistency.py  forge_hooks.py  kit_bashing.py  live_edit.py  model_manager.py  orchestrator.py  requirements.txt
ai-orchestration/python/benchmark/: README.md  __init__.py  performance.py  wizard.py
ai-orchestration/python/models/: README.md  __init__.py  downloader.py  env.py  gpu.py  manager.py  registry.py
ai-orchestration/python/pipeline/: __init__.py  stages.py
app/: README.md  main.py
app/samples/: interview-brief.sample.json  runtime-integration-manifest.sample.json
app/samples/generated-prototype/cozy-colony-tales/: README.md  launch_prototype.ps1  launch_prototype.sh  prototype-manifest.json
app/samples/generated-prototype/cozy-colony-tales/config/: commercial-policy.v1.json  project-style.v1.json  rts_sim_balance.v1.json  style-presets.v1.json
app/schemas/: bot-playtest-scenario.v1.schema.json  interview-session.v1.schema.json  playtest-report.v1.schema.json
docs/: ARCHITECTURE_OVERVIEW.md  SETUP.md
docs/adr/: 0000-template.md  0001-runtime-engine-language-and-rendering-direction.md  0002-editor-ui-framework-csharp.md  0003-project-data-format-and-storage.md  0004-ai-orchestration-boundary-and-contract.md  README.md
docs/release/: CROSS_PLATFORM_SMOKE_RUNBOOK.md  RC_HANDOFF_V1.md  READINESS_METRICS_SPEC.md  acceptance_traceability_v1.json  acceptance_traceability_v1.md  policy_change_note.md
docs/release/evidence/: INDEX.md  SMOKE_EVIDENCE_SCHEMA.md  readiness_metrics_sample.json  ubuntu_smoke_template.md  windows_smoke_template.md
docs/testing/: TEST_POLICY.md
editor/csharp/: App.axaml  App.axaml.cs  AssemblyInfo.cs  GameForge.Editor.csproj  HuggingFaceTokenStore.cs  Program.cs  PythonEnvironment.cs
editor/csharp/EditorDiagnostics/: EditorCrashHandler.cs  EditorDiagnosticsLog.cs  EditorDiagnosticsTraceListener.cs
editor/csharp/EditorShell/: CommercialPolicy.cs  EditorProjectLoader.cs  EditorShellContract.cs  EditorWorkspace.cs  FirstRunBenchmarkExample.cs  PlaytestReportViewer.cs  SteamReadiness.cs
editor/csharp/EditorShell/EditorSystems/: AiOrchestrationPanel.cs  BuildingPanel.cs  CoCreatorPanel.cs  DayNightPanel.cs  DialogPanel.cs  InventoryRecipesPanel.cs  LivingNpcsPanel.cs  StoryPanel.cs  WeatherPanel.cs
editor/csharp/EditorShell/Services/: OrchestratorClient.cs
editor/csharp/EditorShell/Theme/: EditorChromeResources.axaml  EditorDialogStyles.axaml
editor/csharp/EditorShell/UI/: FatalErrorReportWindow.axaml  FatalErrorReportWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  NewProjectWizardWindow.axaml  NewProjectWizardWindow.axaml.cs  QuickCommandsWindow.axaml  QuickCommandsWindow.axaml.cs  SettingsWindow.axaml  SettingsWindow.axaml.cs
editor/csharp/EditorShell/ViewModels/: EditorPreferences.cs  MainWindowViewModel.EditorSystems.cs  MainWindowViewModel.SceneFirst.cs  MainWindowViewModel.cs
editor/csharp/Interview/: InterviewQuestionPlanner.cs  InterviewSessionContract.cs  InterviewSessionStore.cs  UncertaintyOptionBridge.cs
editor/csharp/tests/: EditorDiagnosticsLogTests.cs  EditorShellTests.cs  GameForge.Editor.Tests.csproj  InterviewLongSessionContinuityTests.cs  InterviewUncertaintyTests.cs  MainWindowViewModelTests.cs  PlaytestReportViewerTests.cs  SteamReadinessPolicyTests.cs
editor/csharp/tests/Fixtures/: interview-long-session.fixture.json
runtime/cpp/: AnimationSystem.cpp  AnimationSystem.h  AudioSystem.cpp  AudioSystem.h  BuildingSystem.cpp  BuildingSystem.h  CMakeLists.txt  CoCreatorSystem.cpp  CoCreatorSystem.h  CombatSystem.cpp  CombatSystem.h  CutsceneSystem.cpp  CutsceneSystem.h  DialogEvolutionSystem.cpp  DialogEvolutionSystem.h  DialogSystem.cpp  DialogSystem.h  EconomySystem.cpp  EconomySystem.h  Engine.cpp  Engine.h  Entity.h  FactionSystem.cpp  FactionSystem.h  FreeWillSystem.cpp  FreeWillSystem.h  InventorySystem.cpp  InventorySystem.h  LivingNpcSystem.cpp  LivingNpcSystem.h  Logger.h  MeshLoader.cpp  MeshLoader.h  NPCController.cpp  NPCController.h  NarratorSystem.cpp  NarratorSystem.h  NavmeshSystem.cpp  NavmeshSystem.h  RAGSystem.cpp  (+30 more)
runtime/cpp/shaders/: basic.vert  bloom_extract.frag  combine_tonemap.frag  fragment.frag  gaussian_blur.frag  postprocess.frag  postprocess.vert  vertex.vert
runtime/cpp/src/core/: Camera.cpp  Camera.h  Scene.cpp  Scene.h
runtime/cpp/src/engine/: Engine.cpp
runtime/cpp/src/input/: InputManager.cpp  InputManager.h
runtime/cpp/src/render/: VulkanRenderer.cpp  VulkanRenderer.h
runtime/cpp/src/render/shaders/: bloom_extract.frag  combine_tonemap.frag  postprocess.frag  postprocess.vert
runtime/cpp/src/utils/: Logger.h
runtime/cpp/templates/: CMakeLists.txt.template  basic_npc.cpp.template  generated_gameplay.h  player_controller.cpp.template  scene.cpp.template
scripts/: Setup-Alpha.ps1  bootstrap.ps1  bootstrap.py  bootstrap.sh  collect_readiness_metrics.py  package_macos.sh  package_ubuntu.sh  package_windows.ps1  run_smoke_and_capture_evidence.py  setup.sh  smoke_prototype_launch.py  validate_traceability.py
tests/: test_asset_import_pipeline.py  test_benchmark_wizard.py  test_bot_playtesting.py  test_interview_contract.py  test_kit_bashing.py  test_m1_skeleton.py  test_manual_failover.py  test_onboarding_flow.py  test_orchestration_command.py  test_performance_history.py  test_project_lifecycle.py  test_prototype_generation.py  test_readiness_metrics_collection.py  test_smoke_evidence_generation.py  test_traceability_validator.py  test_uncertainty_options.py
(+12 files in other folders)
